--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
     </style>
 </head>
 <body>
-    <h1>Station 9</h1>
+    <h1>Control Cabinet with Delivery Indicator Fresh Water</h1>
     <div id="question"></div>
     <div id="options"></div>
-    <button onclick="nextQuestion()">SUBMIT</button>
+    <button onclick="nextQuestion()">Submit</button>
     <script>
         // Function to clear the quiz score from local storage
 function clearQuizScore() {
-    localStorage.removeItem("Station_09_Score");
+    localStorage.removeItem("Control_Cabinet");
 }
 
 // Function to clear local storage when the tab is closed or refreshed
@@ -49,13 +49,13 @@ window.addEventListener('beforeunload', function() {
         const quiz = [
             {
                 question: "The CO2-enriched air produced during the deacidification process is then blown back into the ambient air via ________________.",
-                options: ["Exhaust pipes", "Building openings", "Windows"],
+                options: ["Exhaust Pipes", "Building Openings", "Windows"],
                 answer: 0
             }
         ];
 
         let currentQuestion = 0;
-        let Station_09_Score = 0;
+        let Control_Cabinet = 0;
 
         // Function to display current question
         function displayQuestion() {
@@ -99,9 +99,9 @@ window.addEventListener('beforeunload', function() {
     }
 
     if (!isAnswered || selectedOption !== quiz[currentQuestion].answer) {
-        Station_09_Score = 0; // Assign zero score if question is not attempted or answered incorrectly
+        Control_Cabinet = 0; // Assign zero score if question is not attempted or answered incorrectly
     } else {
-        Station_09_Score++; // Increment score for correct answer
+        Control_Cabinet++; // Increment score for correct answer
     }
 }
 
@@ -112,8 +112,8 @@ window.addEventListener('beforeunload', function() {
 
             if (currentQuestion === quiz.length) {
                 // All questions answered, store score in local storage
-                localStorage.setItem("Station_09_Score", Station_09_Score);
-                alert("Quiz completed. Your score is " + Station_09_Score);
+                localStorage.setItem("Control_Cabinet", Control_Cabinet);
+                alert("Quiz completed. Your score is " + Control_Cabinet);
             } else {
                 displayQuestion();
             }
